# federated-user-service

./: .gitignore  app.py  pyproject.toml
services/extension/: app.py  schema.graphql
services/user/: app.py  schema.graphql
