[tool.poetry]
name = "federated-user-service"
version = "0.1.0"
description = ""
authors = ["Brent Klein <bklein@xometry.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ariadne = "^0.10.0"
ariadne-extensions = "^0.1.6"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
